fixed function from latest version of java